Section list padding issue and  handle extra spacing fixed

--- a/engine/lithium/builder/ui.less
+++ b/engine/lithium/builder/ui.less
@@ -300,7 +300,7 @@ h3.form-divider {
 // ---------------------------------------------------
 .list-sections{
   .section {
-    padding: 13px 10px;
+    padding: 13px 10px 10px 8px;
     margin: 10px 0;
     position: relative;
     //cursor: move;
@@ -693,7 +693,7 @@ h3.form-divider {
 
 .section-handle{
   display: block;
-  padding: 0 10px;
+  padding: 0 5px 0 0;
   float: left;
   &, span{
     cursor: move !important;
